--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -5,6 +5,8 @@ nav{
       display: flex;
       justify-content: space-between;
       align-items: center;
+    
+      
       /* box-shadow: 0 0px 10px 0px var(--main-gray);
     z-index:100; */
     a{
@@ -14,6 +16,7 @@ nav{
         color:var(--text-color);
         transition:all 0.5s ease-in-out;
         font-size: 2em;
+        text-shadow:1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; 
         &:hover{
             transform: scale(1.5);
            color:var(--text-color);
@@ -31,6 +34,7 @@ nav{
         animation-iteration-count: 1;
         animation-duration: 3s;
         animation-fill-mode:forwards;
+        text-shadow:1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; 
     }
   
   }
@@ -50,3 +54,69 @@ nav{
       }
   
   }
+  .fa-bars{
+    position: relative;
+    width: 50px;
+    height: 50px;
+   font-size: 3em;
+   margin-right: 1em;
+   
+  }
+  @media  (max-width:992px) {
+      
+    .navbar-links a, .night-mode{ 
+           display: none;
+        }
+        .dropdown li a{
+        display: block;
+        font-size: 1em;
+        
+        }
+    }
+    @media (min-width:992px) {
+      
+        .fa-bars{
+              display: none;
+          }
+      }
+      @media only screen and (max-width: 576px){
+        .fa-bars{
+            color: var(--main-yellow);
+        }
+      }
+      .dropdown{ 
+        display: none;
+        position: absolute;
+       right:-0.6em;
+       top: 1em;
+       background-color: var(--main-color);
+       border-radius: 30px;
+       width: 100vw;
+       box-shadow: 0px 30px 10px -15px var(--main-color);
+       li{
+        list-style-type: none;
+        line-height: 3;
+        text-decoration: none;
+        font-size:0.3em;
+      }
+      a{
+        text-decoration: none;
+          color: var(--text-color);
+      }
+        }
+        
+       
+        
+        .fa-bars:hover .dropdown{
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+      
+      }
+     
+      
+     
+      .fa-moon{
+        color: var(--main-color);
+      }
+      
