--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -10,21 +10,20 @@
     text-align: center;
     line-height: 3;
     padding: 6em 0;
-   
+    h2{
+        letter-spacing: 3px;
+        font-size: 2em;
+        text-transform: uppercase;
+        font-weight: bold;
+        text-shadow:var(--main-yellow) 1px 0 10px;
+        
+      }
+      p{
+        font-size: 1.5em;
+      }
+  }
   
-  }
-  .my-projects-title h2{
-    letter-spacing: 3px;
-    font-size: 2em;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-shadow:var(--main-yellow) 1px 0 10px;
-    
-  }
-  
-  .my-projects-title p{
-    font-size: 1.5em;
-  }
+
   .my-projects img{
     display: block;
     width: 300px;
