--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,22 +1,22 @@
 .about{
-  
+     display: flex;
+     justify-content: center;
+     align-items: center;
     min-height: 100vh;
-    /* background-color: var(--text-color); */
-    /* margin: 6em 6em; */
     color: var(--text-color);
   
   .about-text{
    margin: 6em 3em;
    line-height: 1.5;
    font-size: 1.5em;
-text-align: justify;
+  text-align: justify;
   }
  img{
   display: block;
   width:300px;
   height: 300px;
   border-radius: 50%;
- margin-top: 5em;
-
+  
+ 
 }
 }
