--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,12 +1,14 @@
 .main-contact{
+  display: flex;
+  flex-wrap: wrap;
     min-height: 100vh;
     margin: 5em 3em;
     color: var(--text-color);
     text-shadow:1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; 
-
     background: linear-gradient(70deg,var(--main-yellow
     ) 33%, var(--main-color) 67%);
     }
+
     form{
       display: flex;
       flex-direction: column;
@@ -74,4 +76,14 @@
       color: var(--text-color);
       font-size: 1.5em;
       padding-left: 1em;
+     }
+
+     @media only screen and (max-width: 576px){
+      .connect,label,form, .main-contact{
+        margin:2em 0;
+      }
+      button[type="submit"], .connect{
+        font-size: 0.8em;
+      }
+
      }
