--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,14 +1,12 @@
 nav{
-    /* position: fixed;
-    top:0; */
+    
     margin-top: 1em;
       display: flex;
       justify-content: space-between;
       align-items: center;
     
       
-      /* box-shadow: 0 0px 10px 0px var(--main-gray);
-    z-index:100; */
+      
     a{
         display:inline-block;
         text-decoration: none;
@@ -79,9 +77,12 @@ nav{
               display: none;
           }
       }
-      @media only screen and (max-width: 576px){
+      @media  (max-width: 576px){
         .fa-bars{
             color: var(--main-yellow);
+        }
+        .logo{
+          font-size: 1em !important;
         }
       }
       .dropdown{ 
