--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -63,7 +63,7 @@
         font-weight: 600;
         color:var(--main-gray);
        
-        /* transition: all 2s; */
+        transition: all 2s; 
         /* animation-name: rotate;
         animation-iteration-count: 3;
         animation-duration: 10s;
@@ -76,10 +76,10 @@
   
   
   
-  /* .skills div:hover{
-      margin-right:5em ;
+   .skills div:hover{
+      margin-left:.5em ;
      
-  } */
+  } 
   
   /* for animating H1 */
   h1 {
